[package]
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
categories = ["development-tools::debugging"]
description = "Convenient macro to quickly plot variables."
edition = "2018"
keywords = ["debug", "debugging", "plot", "plotting"]
license = "MIT OR Apache-2.0"
name = "debug_plotter"
readme = "README.md"
repository = "https://github.com/fabianboesiger/debug-plotter"
version = "0.2.1"

[dependencies]
plotters = { version = "^0.3", optional = true }
num-traits = { version = "^0.2", optional = true }
piston_window = { version = "0.120.0", optional = true }
plotters-piston = { git = "https://github.com/plotters-rs/plotters-piston", optional = true }

[features]
default = ["debug", "live"]
debug = ["plotters", "num-traits"]
plot-release = []
live = ["piston_window", "plotters-piston"]