[package]
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
categories = ["development-tools::debugging"]
description = "Convenient macro to quickly plot variables."
edition = "2018"
keywords = ["debug", "debugging", "plot", "plotting"]
license = "MIT OR Apache-2.0"
name = "debug_plotter"
readme = "README.md"
repository = "https://github.com/fabianboesiger/debug-plotter"
version = "0.3.0"

[dependencies]
plotters = "^0.3"
num-traits = "^0.2"
log = "^0.4"
piston_window = { version = "0.120.0", optional = true }
plotters-piston = { git = "https://github.com/plotters-rs/plotters-piston", optional = true }

[features]
default = ["live"]
live = ["piston_window", "plotters-piston"]